css correction for continue button and added the button inside of the formto handel submit

--- a/appointments/templates/index.html
+++ b/appointments/templates/index.html
@@ -83,11 +83,11 @@
             <input type="text" id="booking-reason" name="booking-reason" required>
           </div>
         </div>
+        <div class="form-row" style="justify-content: flex-end;">
+          <button class="continue-btn">Continue</button>
+        </div>
       </form>
       <!-- form to collect patient information END -->
-        <div class="form-row" style="justify-content: flex-end;">
-          <button type="submit" class="continue-btn">Continue</button>
-        </div>
     </div>
 </section>
 
